--- a/WowCarLauncher/mobile/src/main/res/layout/content_l_dock.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_l_dock.xml
@@ -2,7 +2,8 @@
 <com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/l_item_bg">
 
     <com.zhy.android.percent.support.PercentLinearLayout
         android:id="@+id/ll_dock1"
