--- a/WowCarLauncher/mobile/src/main/res/layout/activity_lanncher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_lanncher.xml
@@ -11,37 +11,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.zhy.android.percent.support.PercentRelativeLayout
+        <com.wow.carlauncher.activity.launcher.view.LPromptView
             android:id="@+id/ll_top"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_alignParentTop="true"
             android:orientation="horizontal"
-            android:padding="10dp"
-            app:layout_heightPercent="12.8%h">
-
-            <com.wow.carlauncher.activity.launcher.view.LPromptView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-            <TextView
-                android:id="@+id/tv_time"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical|end"
-                android:textColor="#fff"
-                app:layout_textSizePercent="60%h" />
-            <!--<ImageView-->
-            <!--android:id="@+id/iv_set"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="0dp"-->
-            <!--android:layout_alignParentRight="true"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--android:contentDescription="@string/iv_content"-->
-            <!--android:src="@mipmap/ic_menu"-->
-            <!--app:layout_heightPercent="60%h"-->
-            <!--app:layout_widthPercent="60%h" />-->
-        </com.zhy.android.percent.support.PercentRelativeLayout>
+            app:layout_heightPercent="12.8%h" />
 
         <com.wow.carlauncher.activity.launcher.view.LDockView
             android:id="@+id/ll_dock"
@@ -65,7 +41,7 @@
             android:paddingRight="5dp">
 
 
-            <com.wow.carlauncher.activity.launcher.view.LDeviceView
+            <com.wow.carlauncher.activity.launcher.view.LPersionView
                 android:id="@+id/item_2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
