--- a/WowCarLauncher/mobile/src/main/res/layout/content_l_dock.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_l_dock.xml
@@ -28,7 +28,7 @@
             android:layout_height="0dp"
             android:gravity="center"
             android:text="添加"
-            android:textColor="@android:color/white"
+            android:textColor="@color/launch_text_color"
             app:layout_heightPercent="25%h"
             app:layout_textSizePercent="15%h" />
     </com.zhy.android.percent.support.PercentLinearLayout>
@@ -56,7 +56,7 @@
             android:layout_height="0dp"
             android:gravity="center"
             android:text="添加"
-            android:textColor="@android:color/white"
+            android:textColor="@color/launch_text_color"
             app:layout_heightPercent="25%h"
             app:layout_textSizePercent="15%h" />
     </com.zhy.android.percent.support.PercentLinearLayout>
@@ -84,7 +84,7 @@
             android:layout_height="0dp"
             android:gravity="center"
             android:text="添加"
-            android:textColor="@android:color/white"
+            android:textColor="@color/launch_text_color"
             app:layout_heightPercent="25%h"
             app:layout_textSizePercent="15%h" />
     </com.zhy.android.percent.support.PercentLinearLayout>
@@ -112,7 +112,7 @@
             android:layout_height="0dp"
             android:gravity="center"
             android:text="添加"
-            android:textColor="@android:color/white"
+            android:textColor="@color/launch_text_color"
             app:layout_heightPercent="25%h"
             app:layout_textSizePercent="15%h" />
     </com.zhy.android.percent.support.PercentLinearLayout>
@@ -142,7 +142,7 @@
             android:layout_height="0dp"
             android:gravity="center"
             android:text="添加"
-            android:textColor="@android:color/white"
+            android:textColor="@color/launch_text_color"
             app:layout_heightPercent="25%h"
             app:layout_textSizePercent="15%h" />
     </com.zhy.android.percent.support.PercentLinearLayout>
@@ -169,7 +169,7 @@
             android:layout_height="0dp"
             android:gravity="center"
             android:text="全部应用"
-            android:textColor="@android:color/white"
+            android:textColor="@color/launch_text_color"
             app:layout_heightPercent="25%h"
             app:layout_textSizePercent="15%h" />
     </com.zhy.android.percent.support.PercentLinearLayout>
