--- a/WowCarLauncher/mobile/src/main/res/layout/content_l_amap.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_l_amap.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rl_base"
     android:layout_width="match_parent"
@@ -40,10 +40,9 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_alignParentBottom="true"
-        android:layout_below="@id/ll_icon"
         android:gravity="center"
         android:orientation="horizontal"
-        android:paddingTop="20dp">
+        app:layout_heightPercent="20%h">
 
         <com.zhy.android.percent.support.PercentLinearLayout
             android:id="@+id/btn_go_home"
@@ -80,11 +79,9 @@
         android:id="@+id/ll_navi"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@id/ll_icon"
         android:orientation="vertical"
-        android:paddingTop="20dp"
-        android:visibility="gone">
+        android:visibility="gone"
+        app:layout_heightPercent="30%h">
 
         <TextView
             android:id="@+id/tv_road"
@@ -112,4 +109,4 @@
             android:textColor="#f1f1f1"
             app:layout_textSizePercent="15%h" />
     </com.zhy.android.percent.support.PercentLinearLayout>
-</com.zhy.android.percent.support.PercentRelativeLayout>
+</com.zhy.android.percent.support.PercentLinearLayout>
