--- a/WowCarLauncher/mobile/src/main/res/layout/content_l_weather.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_l_weather.xml
@@ -34,7 +34,7 @@
             android:layout_weight="1"
             android:contentDescription="@string/app_name"
             android:scaleType="fitCenter"
-            android:src="@mipmap/l_music_cd"
+            android:src="@mipmap/wic_no"
             app:layout_heightPercent="76%h"
             app:layout_widthPercent="76%h" />
 
@@ -59,7 +59,7 @@
             android:ellipsize="end"
             android:gravity="center"
             android:maxLines="1"
-            android:text="气温"
+            android:text="等待数据"
             android:textColor="#f1f1f1"
             app:layout_textSizePercent="50%h" />
 
