--- a/WowCarLauncher/mobile/src/main/res/layout/popup_music.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/popup_music.xml
@@ -49,7 +49,7 @@
                 android:id="@+id/iv_prew"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:src="@mipmap/ic_prev"
+                android:src="@mipmap/ic_prev2"
                 app:layout_heightPercent="50%h"
                 app:layout_widthPercent="50%h" />
         </com.zhy.android.percent.support.PercentLinearLayout>
@@ -65,7 +65,7 @@
                 android:id="@+id/iv_play"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:src="@mipmap/ic_play"
+                android:src="@mipmap/ic_play2"
                 app:layout_heightPercent="50%h"
                 app:layout_widthPercent="50%h" />
         </com.zhy.android.percent.support.PercentLinearLayout>
@@ -81,7 +81,7 @@
                 android:id="@+id/iv_next"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:src="@mipmap/ic_next"
+                android:src="@mipmap/ic_next2"
                 app:layout_heightPercent="50%h"
                 app:layout_widthPercent="50%h" />
         </com.zhy.android.percent.support.PercentLinearLayout>
