no commit message

--- a/WowCarLauncher/mobile/src/main/res/layout/activity_driving.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_driving.xml
@@ -3,24 +3,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@android:color/black">
 
     <com.zhy.android.percent.support.PercentRelativeLayout
         android:id="@+id/fl_rev"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:background="@android:color/holo_green_dark"
         app:layout_marginLeftPercent="1%w"
         app:layout_widthPercent="38%w">
 
-        <com.wow.carlauncher.common.view.DashboardView
-            android:id="@+id/dv_rev"
-            android:layout_width="0dp"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_centerInParent="true"
-            app:layout_heightPercent="70%w"
-            app:layout_widthPercent="70%w" />
+            app:layout_heightPercent="100%w">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/app_name"
+                android:src="@mipmap/driving_rev_bg" />
+
+            <ImageView
+                android:id="@+id/driving_rev_bg_cursor"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/app_name"
+                android:src="@mipmap/driving_rev_bg_cursor" />
+        </RelativeLayout>
     </com.zhy.android.percent.support.PercentRelativeLayout>
 
     <com.zhy.android.percent.support.PercentRelativeLayout
@@ -28,33 +38,8 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
-        android:background="@android:color/black"
         app:layout_marginRightPercent="1%w"
         app:layout_widthPercent="38%w">
-
-        <com.czp.library.ArcProgress
-            android:id="@+id/myProgress01"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
-            android:layout_centerInParent="true"
-            android:progress="11"
-            app:bgShow="false"
-            app:borderWidth="20dp"
-            app:degree="90"
-            app:progressStyle="arc"
-            app:radius="80dp" />
-
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_centerInParent="true"
-            android:src="@mipmap/test_11" />
-
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_centerInParent="true"
-            android:src="@mipmap/test_12" />
 
     </com.zhy.android.percent.support.PercentRelativeLayout>
 
@@ -62,8 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_toEndOf="@id/fl_rev"
-        android:layout_toStartOf="@id/fl_speed"
-        android:background="@android:color/holo_red_dark">
+        android:layout_toStartOf="@id/fl_speed">
 
 
     </FrameLayout>
