--- a/WowCarLauncher/mobile/src/main/res/layout/content_l_music.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_l_music.xml
@@ -11,8 +11,10 @@
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:ellipsize="marquee"
         android:gravity="center"
-        android:lines="1"
+        android:paddingEnd="5dp"
+        android:paddingStart="5dp"
         android:text="音乐"
         android:textColor="@android:color/white"
         app:layout_heightPercent="12%h"
